@@ -8,6 +8,7 @@ DIST calcboot-3.83.0.tar.bz2 144076 RMD160 758be59ca9576b0632da003cf05a691eefd6c
 DIST calcboot-3.86.1.tar.bz2 45760 RMD160 3d2c151a35117b6163ff028bef9603370574d609 SHA1 fac0e326db2b319f1535c74aa95369b75c756acf SHA256 121532af10b2fa56036c0bbfa6d6389aab6d283e698d3758703a5909750e2f2b
 DIST calcboot-3.86.2.tar.bz2 45770 RMD160 4e456cec5b6c50275dfb2f071b0caf0fbe17f246 SHA1 9f7a3944c7680fc7c130437a785dc55066da27d6 SHA256 ef7abf19acdff0464391e11ac249cb1d9c42e16b85e6805ce9e6d801111b10b5
 DIST calcboot-3.86.3.tar.bz2 53663 RMD160 d332a0fb74bebdbdda4dc69283b53327b4e99a9e SHA1 f354e186c39d3e10a3cad225937d08f9f61f711e SHA256 cfe6e4b81263d02cf46e12a76f3f333d3da7b4941f3295082bd87d77a7be35e9
+DIST calcboot-3.86.4.tar.bz2 53713 RMD160 5d46c777849f51e18e3fae9eae1bc36983a18947 SHA1 656a33e301622f6fdaeb82db25cf0660d9e89a16 SHA256 3f63336d156712707fb2b83612a3dbc0cc26986d670ddb35f6a57b43b2f9de88
 DIST calcboot-4.02.1.tar.bz2 45786 RMD160 f8abfbdb271e9af3dbc9c828b46b41891ed3ab09 SHA1 853d5e94ff4b160da5297cf1ae559c372f8bc13e SHA256 f6577eaee72b96659693d894b2b118423e716cc5cc0b47f0ff593807ad5324e0
 DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a76 SHA1 8b97a708c1dc8bcb0505fab59b143368ed25b60b SHA256 1161ef0c248b931a872b92b9fe29a1ad54be2428976f19b8d88a8aa95cb3d65f
 DIST syslinux-3.82.tar.bz2 3086896 RMD160 67f15d5436be9697065bfd52de6a864d7aed742a SHA1 e949b13e0ef016ec39f7dafacac722936756f41b SHA256 1dbbf8cfd10fc07187fa8bfede23639fc95314976730f3474cb349e8bf6c6f61
@@ -20,6 +21,7 @@ EBUILD calcboot-3.83.0.ebuild 1598 RMD160 37fe9a71c0e6b5dedc87b3b7c316c2fd1bfd63
 EBUILD calcboot-3.86.1.ebuild 1597 RMD160 154001af6106e6f8995df23d77775c477640cc01 SHA1 6641ed97e34719444eaccd15b9ce7f18a7ef4f7f SHA256 7689ddf1a2f6ddd8e40b0adf6c4466072b4c415a26bb69f9268bd6362ccf4b92
 EBUILD calcboot-3.86.2.ebuild 1597 RMD160 154001af6106e6f8995df23d77775c477640cc01 SHA1 6641ed97e34719444eaccd15b9ce7f18a7ef4f7f SHA256 7689ddf1a2f6ddd8e40b0adf6c4466072b4c415a26bb69f9268bd6362ccf4b92
 EBUILD calcboot-3.86.3.ebuild 1623 RMD160 9b44e697c4b9111fa30945ca6784e6551282a8c9 SHA1 db5ef0c3dbbed5671bddda25f7887ee0e7529c7a SHA256 0aac4989f8d6063f63ecca3105b6ac829be8e8f7d8d5b568cbafaa306e6d123b
+EBUILD calcboot-3.86.4.ebuild 1623 RMD160 9b44e697c4b9111fa30945ca6784e6551282a8c9 SHA1 db5ef0c3dbbed5671bddda25f7887ee0e7529c7a SHA256 0aac4989f8d6063f63ecca3105b6ac829be8e8f7d8d5b568cbafaa306e6d123b
 EBUILD calcboot-4.02.1.ebuild 1550 RMD160 881bd80ddb5367cb58a1d05dbf43aff647faaff0 SHA1 d3088e523d20a9e6042198adbcddb26038d7b0d0 SHA256 3187a8e754229eebc6842f41d2f1781d413491dcf08ec11bb1e4f4212602e4fd
-MISC ChangeLog 1450 RMD160 5c8b8fed05cb01b0a4762ac379ba67e108254f34 SHA1 4254cc1232fb2e37b144a7deea253a909d1aba16 SHA256 bc954523b8653049613afca6fa9f7620652ab319e47cefe680eaed1ccc621d7a
+MISC ChangeLog 1595 RMD160 1e9711f7eeae140f521a0b928922c4aff338c130 SHA1 d74a6f7e50bbe22933fd3c6bec62b0dec7c96e6f SHA256 6e66d0796b1620e41a72ea7d565e67410eb4c6b1d73cb5cbe66b46fe0a42598b
 MISC metadata.xml 252 RMD160 e886f2ac14de406bbadb647631df7b3de928794e SHA1 ea46203f8029e9877a5656756196cf6fa4643594 SHA256 4352693c8bde260bfcdaad19c5e9f5e116ae56492f1223d4b3c713b4c24a1997
