@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calcboot-3.86.4 (01 Dec 2011)
+
+  01 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calcboot-3.86.4.ebuild:
+  Fix work with pxelinux
+
   02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calcboot-3.86.3.ebuild:
   Unmask calcboot.
